deploy: b832103f6bd44daaca380a6f4c7f6953ed25b5f3

--- a/Applications/index.html
+++ b/Applications/index.html
@@ -372,7 +372,7 @@
 <p><strong>RomWBW Applications Guide</strong> \
 Version 3.6 \
 MartinR \&amp; Phillip Summers  (<a href="mailto:"></a>) \
-11 Dec 2025</p>
+12 Dec 2025</p>
 <h1 id="summary">Summary</h1>
 <p>RomWBW is supplied with a suite of software applications that enhance
 the use of the system. Some of these applications have been written
@@ -3289,7 +3289,8 @@ scan all .VGM files in the current directory.</p>
 </ul>
 <h4 id="etymology_20">Etymology</h4>
 <p>The <code>VGMINFO</code> application was written and contributed to RomWBW by Joao
-Miguel Duraes.</p>
+Miguel Duraes. An AI LLM was utilized in the creation of this
+application.</p>
 <h2 id="vgmplay-video-game-music-play">VGMPLAY (Video Game Music Play)</h2>
 <table>
 <thead>
