deploy: 10dc0fc0059595211f5ac985df438e0617f2e0e4

--- a/Hardware/index.html
+++ b/Hardware/index.html
@@ -404,7 +404,7 @@
 <p><strong>RomWBW Hardware</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-19 Jan 2026</p>
+21 Jan 2026</p>
 <h1 id="overview">Overview</h1>
 <h2 id="supported-platforms">Supported Platforms</h2>
 <p>This section contains a summary of the system configuration target for
@@ -777,7 +777,7 @@ external bank switching.</p>
 <tr>
 <td><a href="#s100-computers-t35-fpga-z80-sbc">S100 Computers T35 FPGA Z80 SBC</a><sup>4</sup></td>
 <td>S100</td>
-<td>SZ80_t35.rom</td>
+<td>SZ80_t35_std.rom</td>
 <td style="text-align: right;">9600</td>
 </tr>
 <tr>
@@ -1309,7 +1309,7 @@ of the SIO ports, for ease of use with modern computers.</p>
 <li>Website: <a href="http://www.s100computers.com/My%20System%20Pages/FPGA%20Z80%20SBC/FPGA%20Z80%20SBC.htm">S100 Computers FPGA Z80
   SBC</a></li>
 </ul>
-<h4 id="rom-image-file-sz80_t35rom">ROM Image File: SZ80_t35.rom</h4>
+<h4 id="rom-image-file-sz80_t35_stdrom">ROM Image File: SZ80_t35_std.rom</h4>
 <table>
 <thead>
 <tr>
@@ -1392,8 +1392,8 @@ of the SIO ports, for ease of use with modern computers.</p>
 </li>
 <li>
 <p>RomWBW is loaded by the S100 monitor from either CF Card or SD Card.
-  The CF/SD Card should be imaged using SZ80_t35_hd1k_combo.img which
-  includes RomWBW.</p>
+  The CF/SD Card should be imaged using SZ80_t35_std_hd1k_combo.img
+  which includes RomWBW.</p>
 </li>
 </ul>
 <h2 id="genesis-z180-system">Genesis Z180 System</h2>
