--- a/Hardware/index.html
+++ b/Hardware/index.html
@@ -404,7 +404,7 @@
 <p><strong>RomWBW Hardware</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-21 Jan 2026</p>
+06 Feb 2026</p>
 <h1 id="overview">Overview</h1>
 <h2 id="supported-platforms">Supported Platforms</h2>
 <p>This section contains a summary of the system configuration target for
@@ -4889,6 +4889,10 @@ the active platform and configuration.</p>
 <tr>
 <td>PRP</td>
 <td>PropIO Host Interface Controller</td>
+</tr>
+<tr>
+<td>SCTIM</td>
+<td>SC737 50Hz System Timer</td>
 </tr>
 </tbody>
 </table>
